kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ab-frontend-service
spec:
  selector:
    app: ab-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
